# fastapi-dockerize

./: README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
sample_app/: __init__.py
tests/: test_app.py
